--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "^2.4.1",
     "moment": "^2.22.0",
     "ng2-charts": "^1.6.0",
+    "ngx-perfect-scrollbar": "^5.3.5",
     "npm": "^5.8.0",
     "rxjs": "^5.5.2",
     "sweetalert": "^2.1.0",
