--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ngx-perfect-scrollbar": "^5.3.5",
     "npm": "^5.8.0",
     "rxjs": "^5.5.2",
+    "socket.io": "^2.1.0",
     "sweetalert": "^2.1.0",
     "zone.js": "^0.8.14"
   },
@@ -37,6 +38,7 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "@types/socket.io-client": "^1.4.32",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
