--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@swimlane/ngx-charts": "^8.0.0",
     "core-js": "^2.4.1",
     "moment": "^2.22.0",
     "ng2-charts": "^1.6.0",
