Estructura general, creacion de pdf (Prueba)

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@types/jspdf": "^1.1.31",
     "core-js": "^2.4.1",
+    "jspdf": "^1.4.0",
     "moment": "^2.22.0",
     "ng2-charts": "^1.6.0",
     "ngx-perfect-scrollbar": "^5.3.5",
